Move ietf-netconf-monitoring-extension
This is an implementation detail, let's make sure we treat it that way.

JIRA: NETCONF-891
Change-Id: I2de2dbf7c348f1790f9e2cec21db8b9cbfa0a2d2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>